cleanup and play with running at the command line